--- a/index.html
+++ b/index.html
@@ -25,9 +25,19 @@
             <p class="paragrafos">Anunciado em 9 de janeiro de 2007, o <strong>iPhone</strong> foi lançado no dia 29 de junho de 2007 nos <strong>EUA</strong>, em 9 de novembro de 2007 na <strong>Alemanha</strong> e no <strong>Reino Unido</strong>, e em 29 de novembro na <strong>França</strong>, por <a href="https://www.apple.com/br/stevejobs/" target="_blank" class="externos">Steve Jobs</a> ex-presidente e fundador da marca <strong>Apple Inc</strong>. Em 2008 foi lançado no mercado asiático e resto da <strong>Europa</strong>.</p>
         </section>
 
-        <section class="texto">
+        <section class="imagens" id="img002">
             <h2 class="segundo-titulo-h2">Sua Primeira Versão De Celular</h2>
-            <p></p>
+            <p class="paragrafos">O <strong>IPhone OS 1</strong> é o primeiro grande lançamento do <strong>iOS</strong>, o sistema operacional móvel da <strong>Apple</strong>. O <strong>iPhone OS 1.1.5</strong> é a mais recente e última versão do iPhone da <strong>Apple</strong>. Esta versão do <strong>iOS</strong> foi a primeira iteração do sistema operacional móvel centrado no toque.</p>
+        </section>
+
+        <picture>
+            <source media="(max-width:670px )" srcset="imagens/celular.pequena.webp">
+            <img src="imagens/celular.grande.webp" alt="Primeiro celular">
+        </picture>
+
+        <section class="imagens" id="img003">
+
+
         </section>
 
 
