--- a/index.html
+++ b/index.html
@@ -36,9 +36,18 @@
         </picture>
 
         <section class="imagens" id="img003">
-
-
+            <p class="paragrafos">Tinha uma tela <strong>TFT</strong> de <strong>3,5 polegadas</strong> com <a href="https://www.corning.com/gorillaglass/cala/pt/glass-types/gorilla-glass-3-plus.html" target="_blank" class="externos">Gorilla Glass</a>, uma bateria de <strong>1.400mAh</strong> e uma única câmera traseira de <strong>2MP</strong>. A conectividade ainda era a <strong>2G</strong>, mesmo o <strong>3G</strong> já estando disponível há alguns anos na época.Na época, o <strong>iPhone</strong> tinha um preço oficial de US$ 499 para o modelo com <strong>4 GB</strong> de armazenamento, e US$ 599 na opção de  <strong>8 GB</strong>.</p>
         </section>
+
+        <section class="sem-imagem">
+            <h1 id="titulo-sem-imagem">Surge um novo celular</h1>
+        </section>
+
+        <section class="imagens" id="img004">
+            <p class="paragrafos"> <strong>Phone SE </strong>foi o segundo celular que a <strong>Iphone</strong> criou, O vidro frontal é plano com bordas curvadas. A parte traseira é de vidro, com uma moldura de alumínio anodizado ao redor da estrutura. O botão lateral está no lado direito do dispositivo. O dispositivo tem um botão de Início sólido com <strong>Touch ID</strong>. </p>
+        </section>
+
+        
 
 
 
