--- a/index.html
+++ b/index.html
@@ -77,16 +77,27 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/wC98qNw1TwA?si=aRZMiokEL7BAkJLy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
 
-        
+        <aside>
+            <h3 class="quarto-titulo-h3">Quer aprender mais?</h3>
 
+            <p class="paragrafo-aside">A cada dia que passa a <strong>Apple</strong> sempre se inova, sendo com novos modelos de dispositivos e etc. Aqui estão alguns modelos de celulares mais vendidos em <strong>2024</strong> no <strong>Brasil</strong>.</p>
 
-
-
-
-
-
-
+            <ul class="ll">
+                <li> <abbr title="(2024)">iPhone 15 Pro Max</abbr></li>
+                <li> <abbr title="(2024)">iPhone 15</abbr></li>
+                <li> <abbr title="(2024)">iPhone 15 Pro </abbr></li>
+                <li> <abbr title="(2024)">iPhone 14</abbr></li>
+                <li> <abbr title="(2024)">iPhone 14 Pro </abbr></li>
+                <li> <abbr title="(2024)">iPhone 14 Pro Max</abbr></li>
+                <li> <abbr title="(2024)">iPhone 13</abbr></li>
+                <li> <abbr title="(2024)">iPhone 13 Pro Max</abbr></li>
+                <li> <abbr title="(2024)">iPhone 13 Pro</abbr></li>
+                <li> <abbr title="(2024)">iPhone 12</abbr></li>
+            </ul>
+        </aside>
     </main>
+
+    <footer>Site criado por Tarsis Lucas para a minha aprendizagem.</footer>
 
 
 </body>
