novas configurações, botão personalizado

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
 
         <aside>
-            <h3 class="quarto-titulo-h3">Quer aprender mais?</h3>
+            <h3 class="quarto-titulo-h3">Quer aprender mais ?</h3>
 
             <p class="paragrafo-aside">A cada dia que passa a <strong>Apple</strong> sempre se inova, sendo com novos modelos de dispositivos e etc. Aqui estão alguns modelos de celulares mais vendidos em <strong>2024</strong> no <strong>Brasil</strong>.</p>
 
@@ -98,7 +98,9 @@
         </aside>
     </main>
 
-    <footer>Site criado por Tarsis Lucas para a minha aprendizagem.</footer>
+    <footer>
+        <p id="paragrafo-footer">Site criado por <a id="link-footer" href="https://github.com/TarsisLucasDaniel" target="_blank">Tarsis Lucas</a> para a minha aprendizagem</p>
+    </footer>
 
 
 </body>
