--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </section>
 
         <picture>
-            <source media="(max-width:670px )" srcset="imagens/celular.pequena.webp">
+            <source media="(max-width:670px )" srcset="imagens/celular.pequenaa.webp">
             <img src="imagens/celular.grande.webp" alt="Primeiro celular">
         </picture>
 
@@ -40,11 +40,10 @@
             <p class="paragrafos">Tinha uma tela <strong>TFT</strong> de <strong>3,5 polegadas</strong> com <a href="https://www.corning.com/gorillaglass/cala/pt/glass-types/gorilla-glass-3-plus.html" target="_blank" class="externos">Gorilla Glass</a>, uma bateria de <strong>1.400mAh</strong> e uma única câmera traseira de <strong>2MP</strong>. A conectividade ainda era a <strong>2G</strong>, mesmo o <strong>3G</strong> já estando disponível há alguns anos na época.Na época, o <strong>iPhone</strong> tinha um preço oficial de US$ 499 para o modelo com <strong>4 GB</strong> de armazenamento, e US$ 599 na opção de  <strong>8 GB</strong>.</p>
         </section>
 
-        <section class="com-imagem">
-            <h1 id="titulo-com-imagem">Surge um novo celular</h1>
-        </section>
-
         <section class="imagens" id="img004">
+
+            <h1 id="titulo-com-imagem">Surge um novo celular</h1>
+
             <p class="paragrafos"> <strong>Phone SE </strong>foi o segundo celular que a <strong>Iphone</strong> criou, O vidro frontal é plano com bordas curvadas. A parte traseira é de vidro, com uma moldura de alumínio anodizado ao redor da estrutura. O botão lateral está no lado direito do dispositivo. O dispositivo tem um botão de Início sólido com <strong>Touch ID</strong>. </p>
         </section>
 
@@ -57,11 +56,10 @@
             <p class="paragrafos">O <strong>Apple</strong> <a href="https://www.apple.com/br/iphone-se/" target="_blank" class="externos">iPhone SE</a> é um smartphone com o sistema operacional <strong>iOS</strong>, display de <strong>4.7 polegadas</strong> . O melhor preço para o <a href="https://www.apple.com/br/iphone-se/" target="_blank" class="externos">Apple iPhone SE</a> no <strong>Brasil</strong> é de <strong>R$ 2.249</strong>. Por conta de muitos lançamentos da Apple algumas versões são consideradas antigas e com isso o preço também abaixa.</p>
         </section>
 
-        <section class="com-imagem">
-            <h1 id="titulo-com-imagem">Avanço dos celulares IOS</h1>
-        </section>
-
         <section class="imagens" id="img006"> 
+
+            <h1 id="titulo-com-imagem">Avanço dos celulares IOS</h1>
+            
             <p class="paragrafos">Em comparação com a reformulação do design de <strong>2020</strong>, os <strong>iPhones</strong> de modelo básico da <strong>Apple</strong> em <strong>2021</strong> ofereceram melhorias incrementais: ou seja, uma tela mais brilhante, novos modos de câmera e melhor desempenho da câmera. Talvez a maior atualização em relação aos modelos anteriores tenha sido a <strong>duração da bateria</strong>.</p>
         </section>
 
