novas modificações e configurações

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <picture>
             <source media="(max-width:670px )" srcset="imagens/aple.SE.pequena.jpg">
-            <img src="imagens/aple.SE.grande.jpg" alt="Primeiro celular">
+            <img src="imagens/iphone.se.grande.png" alt="Primeiro celular">
         </picture>
 
         <section class="imagens" id="img005">
