--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     </main>
 
     <footer>
-        <p id="paragrafo-footer">Site criado por <a id="link-footer" href="https://github.com/TarsisLucasDaniel" target="_blank">Tarsis Lucas</a> para a minha aprendizagem</p>
+        <p id="paragrafo-footer">Site criado por <a id="link-footer" href="https://github.com/TarsisLucasDaniel" target="_blank">Tarsis Lucas</a> </p>
     </footer>
 
 
