--- a/paginas-extras.html/pagina-de-informacoes2.html
+++ b/paginas-extras.html/pagina-de-informacoes2.html
@@ -25,8 +25,8 @@
 <body>
     <div class="caixa-macs-iphone">
         <picture>
-            <source media="(max-width:400px )" srcset="imagens-paginas-extras/apple-mac.pequena.jpg">
-            <img src="imagens-paginas-extras/apple-mac.grande.jpg" alt="">
+            <source media="(max-width:400px )" srcset="imagens-paginas-extras/ipad-apple.pequena.jpg">
+            <img src="imagens-paginas-extras/ipad-apple.grandee.jpg" alt="">
         </picture>
     </div>
     
