--- a/paginas-extras.html/pagina-de-informacoes3.html
+++ b/paginas-extras.html/pagina-de-informacoes3.html
@@ -26,7 +26,7 @@
     <div class="caixa-macs-iphone">
         <picture>
             <source media="(max-width:400px )" srcset="">
-            <img src="" alt="">
+            <img src="imagens-paginas-extras/apple-tv.grande.jpg" alt="">
         </picture>
     </div>
     
