--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                      
                  </div>
                     
-                <iframe name="frame" src=""  >
+                <iframe name="frame" src="" referrerpolicy="no-referrer" >
                     <p>Infelizmente seu navegador não é compatível</p>
                 </iframe>
 
