--- a/paginas-extras.html/pagina-de-informacoes3.html
+++ b/paginas-extras.html/pagina-de-informacoes3.html
@@ -14,21 +14,32 @@
             padding: 0%;
         }
 
-        #caixa-macs-iphone{
+        main{
+            background-color: rgb(255, 255, 255);
+            max-width: 950px;
+            min-height: 400px;
+            margin-bottom: 30px;
             margin: auto;
-            max-width:950px ;
-            min-width: 400px;
+            padding: 20px;
+            border-bottom-left-radius: 10px;
+            border-bottom-right-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.514);
+        }
+
+        main img{
+          width: 100%;
         }
 
     </style>
 </head>
 <body>
-    <div class="caixa-macs-iphone">
-        <picture>
-            <source media="(max-width:400px )" srcset="">
-            <img src="imagens-paginas-extras/apple-tv.grande.jpg" alt="">
-        </picture>
-    </div>
+    
+        <main>
+            <picture>
+                <source media="(max-width:400px )" srcset="">
+                <img src="imagens-paginas-extras/apple-tv.grande.jpg" alt="">
+            </picture>
+        </main>
     
 </body>
 </html>
