Novos ajustes no site

--- a/paginas-extras.html/pagina-de-informacoes3.html
+++ b/paginas-extras.html/pagina-de-informacoes3.html
@@ -6,7 +6,10 @@
     <title>pagina 3</title>
     <style>
         body{
-            font-family: Arial, Helvetica, sans-serif;
+            width: 100vw;
+            height:100vh;
+            background: black url("imagens-paginas-extras/apple-tv.jpg") no-repeat center center ;
+            background-size: cover; 
         }
 
         *{
@@ -14,32 +17,9 @@
             padding: 0%;
         }
 
-        main{
-            background-color: rgb(255, 255, 255);
-            max-width: 950px;
-            min-height: 400px;
-            margin-bottom: 30px;
-            margin: auto;
-            padding: 20px;
-            border-bottom-left-radius: 10px;
-            border-bottom-right-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.514);
-        }
-
-        main img{
-          width: 100%;
-        }
-
     </style>
 </head>
 <body>
-    
-        <main>
-            <picture>
-                <source media="(max-width:400px )" srcset="">
-                <img src="imagens-paginas-extras/apple-tv.grande.jpg" alt="">
-            </picture>
-        </main>
     
 </body>
 </html>
