--- a/paginas-extras.html/pagina-de-informaoes1.html
+++ b/paginas-extras.html/pagina-de-informaoes1.html
@@ -4,42 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pagina 1</title>
-    <style>
-        body{
-            font-family: Arial, Helvetica, sans-serif;
-        }
+    <style> 
 
-        *{
-            margin: 0%;
-            padding: 0%;
-        }
+     *{
+        margin: 0px;
+        padding: 0px;
+    }
 
-        main{
-            background-color: rgb(255, 255, 255);
-            max-width: 950px;
-            min-height: 400px;
-            margin-bottom: 30px;
-            margin: auto;
-            padding: 20px;
-            border-bottom-left-radius: 10px;
-            border-bottom-right-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.514);
-        }
-
-        main img{
-          width: 100%;
-        }
+    body{
+        width: 100vw;
+        height:100vh;
+        background: black url("imagens-paginas-extras/apple-mac.jpg") no-repeat center center ;
+        background-size: cover; 
+    }
 
     </style>
 </head>
 <body>
-    
-        <main>
-            <picture id="picture-imagem">
-                <source media="(max-width:400px )" srcset="">
-                <img src="imagens-paginas-extras/apple-mac.grande.jpg" alt="">
-            </picture>
-        </main>
 
 </body>
 </html>
