--- a/paginas-extras.html/pagina-de-informacoes3.html
+++ b/paginas-extras.html/pagina-de-informacoes3.html
@@ -8,7 +8,7 @@
         body{
             width: 100vw;
             height:100vh;
-            background: black url("imagens-paginas-extras/apple-tv.jpg") no-repeat center center ;
+            background: black url("imagens-paginas-extras/apple-tv.jpgl") no-repeat center center ;
             background-size: cover; 
         }
 
