Atualizando projeto para versão imprimida

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iphone</title>
     <link rel="shortcut icon" href="imagens/icone.apple.png" type="image/x-icon">
-    <link rel="stylesheet" href="estilo-iphone.css">
-    <link rel="stylesheet" href="estilo-pagina-iframe.css">
+    <link rel="stylesheet" href="estilo-iphone.css" media="screen">
+    <link rel="stylesheet" href="estilo-pagina-iframe.css" media="screen">
+    <link rel="stylesheet" href="printer.css" media="print">
 </head>
 <body>
     <header>
