Novos ajustes no projeto 003

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         </section>
 
         <picture>
-            <source media="(max-width:670px )" srcset="imagens/iphone-OS-pequena.png">
-            <img src="imagens/iphone-OS-grande.png" alt="Primeiro celular">
+            <source media="(max-width:670px )" srcset="imagens/iphone-OS.png">
+            <img class="img-grande" src="imagens/iphone-OS.png" alt="Primeiro celular">
         </picture>
 
         <section class="imagens" id="img003">
@@ -51,7 +51,10 @@
             <p class="paragrafos"> <strong>Phone SE </strong>foi o segundo celular que a <strong>Iphone</strong> criou, O vidro frontal é plano com bordas curvadas. A parte traseira é de vidro, com uma moldura de alumínio anodizado ao redor da estrutura. O botão lateral está no lado direito do dispositivo. O dispositivo tem um botão de Início sólido com <strong>Touch ID</strong>. </p>
         </section>
 
-        
+        <picture>
+            <source media="(max-width:670px )" srcset="imagens/iphone.SE.png">
+            <img class="img-grande" src="imagens/iphone.SE.png" alt="Primeiro celular">
+        </picture>
 
         <section class="imagens" id="img005">
             <p class="paragrafos">O <strong>Apple</strong> <a href="https://www.apple.com/br/iphone-se/" target="_blank" class="externos">iPhone SE</a> é um smartphone com o sistema operacional <strong>iOS</strong>, display de <strong>4.7 polegadas</strong> . O melhor preço para o <a href="https://www.apple.com/br/iphone-se/" target="_blank" class="externos">Apple iPhone SE</a> no <strong>Brasil</strong> é de <strong>R$ 2.249</strong>. Por conta de muitos lançamentos da Apple algumas versões são consideradas antigas e com isso o preço também abaixa.</p>
@@ -65,8 +68,8 @@
         </section>
 
         <picture>
-            <source media="(max-width:670px )" srcset="imagens/evoluçao.apple.pequena.jpeg">
-            <img src="imagens/evoluçao.apple.grande.jpeg" alt="Primeiro celular">
+            <source media="(max-width:670px )" srcset="imagens/iphone-evolução.png">
+            <img class="img-grande" src="imagens/iphone-evolução.png" alt="Primeiro celular">
         </picture>
 
         <section class="imagens" id="img007">
@@ -260,7 +263,7 @@
     </main>
 
     <footer>
-        <p id="paragrafo-footer">Site criado por <a id="link-footer" href="https://github.com/TarsisLucasDaniel" target="_blank">Tarsis Lucas</a> </p>
+        <p>Site criado por <a id="link-footer" href="https://github.com/TarsisLucasDaniel" target="_blank">Tarsis Lucas</a> </p>
     </footer>
 </body>
 </html>
