--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
         </section>
 
         <div class="videos">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/wC98qNw1TwA?si=aRZMiokEL7BAkJLy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="div-video-inner">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/wC98qNw1TwA?si=aRZMiokEL7BAkJLy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
         </div>
 
         <aside>
